--- a/views/guiches/recep_newatendi.hbs
+++ b/views/guiches/recep_newatendi.hbs
@@ -82,7 +82,7 @@ sockets.on('att-painel-guiche', function(data){
                 </div>
             </div>
             <div class="box-title-giches flex-coll">
-                <h1>Novo Atendimento</h1>
+                <h1>Novo Direcionamento</h1>
             </div>
             <div class="grupo-actions-giches flex-row">
 
