--- a/public/css/giche.css
+++ b/public/css/giche.css
@@ -187,13 +187,17 @@
 .group-ficha-redict{
     position: relative;
     width: 500px;
+    /* centraliza no meio descontando o side bar */
+    transform: translateX(-10%);
+
+
     display:none;
     justify-content: center;
     align-items: center;
-    gap: 20px;
     background-color: rgb(233, 236, 241);
     color: rgb(255, 255, 255);
     border-bottom: 1px solid rgba(85, 83, 83, 0.5);
     box-shadow: 0px 0px 5px rgba(133, 133, 133, 0.534);
     border-radius: 10px;
+    
 }
