--- a/views/guiches/recep_newatendi.hbs
+++ b/views/guiches/recep_newatendi.hbs
@@ -38,7 +38,7 @@ sockets.on('att-painel-guiche', function(data){
             </div>
 
             <div class="btns btn-menu-custom-style flex-row" id="{{id}}" onclick="fechaGuiche(this.id)">
-                <i class="fa-spacing-right fa fa-times" style=" font-size: 20px;"></i>
+                <i class="fa-spacing-right fa fa-times"></i>
                 <a>Fechar guiche</a>
             </div>
             
