Update som painel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -368,10 +368,23 @@ body{
 
 
 
+/* efeito painel pisca texto */
 
+.pisca {
+    animation: pisca 1s infinite;
+}
 
-
-
+@keyframes pisca {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 
 
