--- a/public/css/style.css
+++ b/public/css/style.css
@@ -374,19 +374,50 @@ body{
     animation: pisca 1s infinite;
 }
 
-@keyframes pisca {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+/* BIG TEXT */
+.senha_painel_cfg{
+    font-size: 350px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 5px #fff;
+    background-color: transparent;
+    text-align: center;
+    margin: 0;
+    padding: 0; 
+}
+.big-senha-painel{
+    font-size: 350px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 5px #fff;
+    background-color: transparent;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.smal-senha-painel{
+    font-size: 28px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 5px #fff;
+    background-color: transparent;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 
+.medium-senha-painel{
+    font-size: 100px;
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 5px #fff;
+    background-color: transparent;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
 
 
 
