--- a/views/painel/painel_view.hbs
+++ b/views/painel/painel_view.hbs
@@ -16,7 +16,7 @@
         var audio = new Audio('/src/assets/sounds/bip.mp3');
         audio.play();
         loadContent('/painel_view');
-                // pisca o texto da senha chamada elemneto titulo_senha_act
+
     }); 
 </script>
 
@@ -24,17 +24,20 @@
 
     <div class="left-content flex-coll">
         <div class="logo-top">
-            <h1> Painel senhas</h1>
+            <h1> Chamando Agora </h1>
         </div>
 
         <div class="painel_senha_act flex-coll">
-            <h1 class="titulo_senha_act"> SENHA CHAMADA: {{ultimas_guiche.0.dataValues.senha}}</h1>
-            <h1 class="tipo_senha_act"> TIPO DE SENHA: {{ultimas_guiche.0.dataValues.tipo_senha}}</h1>
-            <h1 class="text-big-guiche"> Dirija-se ao {{guiche}}</h1>
+            <h1 class="smal-senha-painel"> TIPO DE SENHA: {{ultimas_guiche.0.dataValues.tipo_senha}}</h1>
+            <div class="senha_painel_cfg ">
+                <h1 class="titulo_senha_act"> SENHA CHAMADA: </h1>
+                <h1 class="big-senha-painel"> {{ultimas_guiche.0.dataValues.senha}} </h1>
+            </div>
+            <h1 class="medium-senha-painel"> {{guiche}}</h1>
         </div>
 
         <div class="bottom-content">
-            <h1>{{ultimas_guiche.0.dataValues.updatedAt}}</h1>
+            <h1 >{{ultimas_guiche.0.dataValues.updatedAt}}</h1>
         </div>
     </div>
 
@@ -46,9 +49,9 @@
             {{#each ultimas_guiche}}
             <div class="ultimas_senhas flex-coll">
 
-                <h1 class="painel_s_tipo">TIPO SENHA: {{dataValues.tipo_senha}}</h1>
-                <h1 class="painel_s_senha"> SENHA: {{dataValues.senha}} </h1>
-                <small class="painel_s_senha">{{dataValues.createdAt}}</small>
+                <h1 class="painel_s_tipo ">TIPO SENHA: {{dataValues.tipo_senha}}</h1>
+                <h1 class="painel_s_senha "> SENHA: {{dataValues.senha}} </h1>
+                <small class="painel_s_senha ">{{dataValues.createdAt}}</small>
                 <hr>
             </div>
             {{/each}}
