--- a/views/painel/painel_salas.hbs
+++ b/views/painel/painel_salas.hbs
@@ -35,17 +35,19 @@
         </div>
 
         <div class="painel_senha_act flex-coll">
-            <h1 class="tipo_senha_act"> TIPO DE SENHA: {{ultimas_salas.0.dataValues.tipo_senha}}</h1>
+
+            <h1 class="smal-senha-painel"> TIPO DE SENHA: {{ultimas_salas.0.dataValues.tipo_senha}}</h1>
             {{#ifCond posts '==' 10}}
-            <h1 class="titulo_senha_act"> SENHA CHAMADA: {{ultimas_salas.0.dataValues.senha}}</h1>
+                <h1 class="titulo_senha_act bolder"> SENHA CHAMADA: {{ultimas_salas.0.dataValues.senha}}</h1>
             {{else}}
-            {{#ifCond posts.dataValues.chamar_por '==' 'Nome Cliente'}}
-            <h1 class="titulo_senha_act"> POR FAVOR: {{posts.dataValues.nome_paciente}}</h1>
-            {{else}}
-            <h1 class="titulo_senha_act"> SENHA : {{posts.dataValues.senha}}</h1>
+                {{#ifCond posts.dataValues.chamar_por '==' 'Nome Cliente'}}
+                    <h1 class="medium-senha-painel"> {{posts.dataValues.nome_paciente}}</h1>
+                {{else}}
+                    <h1 class="big-senha-painel">{{posts.dataValues.senha}}</h1>
+                {{/ifCond}}
             {{/ifCond}}
-            {{/ifCond}}
-            <h1 class="text-big-guiche"> Dirija-se a {{ultimas_salas.0.dataValues.nome}}
+
+            <h1 class="medium-senha-painel"> Dirija-se a {{ultimas_salas.0.dataValues.nome}}
                 {{ultimas_salas.0.dataValues.sala}} </h1>
         </div>
 
@@ -53,6 +55,7 @@
             <h1>{{ultimas_salas.0.dataValues.updatedAt}}</h1>
         </div>
     </div>
+
     <div class="right-content flex-coll">
         <div class="logo-top">
             <h1> Ultimas Chamadas</h1>
@@ -62,7 +65,7 @@
             <div class="ultimas_senhas flex-coll">
 
                 <h1 class="painel_s_tipo">TIPO SENHA: {{dataValues.tipo_senha}}</h1>
-                <h1 class="painel_s_senha"> SENHA: {{dataValues.senha}} {{dataValues.sala}} {{dataValues.nome}} </h1>
+                <h1 class="painel_s_senha txt-bolder"> SENHA: {{dataValues.senha}} {{dataValues.sala}} {{dataValues.nome}} </h1>
                 <small class="painel_s_senha">{{dataValues.createdAt}}</small>
                 <hr>
             </div>
