--- a/views/guiches/recep_newatendi.hbs
+++ b/views/guiches/recep_newatendi.hbs
@@ -59,24 +59,27 @@ sockets.on('att-painel-guiche', function(data){
         <div class="content-adm flex-coll">
             {{!-- lsita giches  --}}
             <div class="modal-content-cancel-ficha" id="modal-content-cancel-ficha">
+                
                 <div class="modal-header flex-row">
-                    <h2>Cancelar Senha</h2>
-                    <div class="btns flexbotao" id="btn-close-modal-add-guiche" onclick="FechaModalCancelSenhaGuiche()">
-                        <p class="p-inside-btn">FECHAR</p>
+                    <h2 class="fa-trasnparent ">Cancelar Senha</h2>
+                    <div class="btns flexbotao no-shadow-btn " id="btn-close-modal-add-guiche" onclick="FechaModalCancelSenhaGuiche()">
+                        <i class="fa-trasnparent  fa-solid fa-times"></i>
                     </div>
                 </div>
+                
                 <div class="modal-body flex-row">
                     {{!-- info new giche --}}
-                    <div class="btnsflexbotao" id="btn-volta-senha-guiche" onclick="CancelarSenhaGuicheConfirm(this.id)">
-                        <p class="p-inside-btn">Voltar senha para fila</p>
+                    <div class="btns" id="btn-volta-senha-guiche" onclick="CancelarSenhaGuicheConfirm(this.id)">
+                        <p>Voltar senha para fila</p>
                      </div>
-                     <div class="btnsflexbotao"  id ="btn-destroy-senha-guiche" onclick="CancelarSenhaGuicheConfirm(this.id)">
+                     <div class="btns"  id ="btn-destroy-senha-guiche" onclick="CancelarSenhaGuicheConfirm(this.id)">
                         <p>Destruir Senha</p>
                      </div>
                 </div>
+                
                 <div class="modal-footer flex-row">
-                     <div class="btns flexbotao" id="btn-add-guiche-cancelar" onclick="FechaModalCancelSenhaGuiche()">
-                        <p class="p-inside-btn">Cancelar</p>
+                     <div class="btns flexbotao no-shadow-btn tools-btns-size " id="btn-add-guiche-cancelar" onclick="FechaModalCancelSenhaGuiche()">
+                        <p>Cancelar</p>
                      </div>
 
                 </div>
