--- a/views/salas/sala_newatendi.hbs
+++ b/views/salas/sala_newatendi.hbs
@@ -88,27 +88,31 @@ sockets.on('show_senha_painel_func_sala', function(data){
             {{!-- lsita giches  --}}
 
             <div class="modal-content-cancel-ficha" id="modal-content-cancel-ficha">
+                
                 <div class="modal-header flex-row">
-                    <h2>Cancelar Senha</h2>
-                    <div class="btn-close-modal-add-guiche flexbotao" id="btn-close-modal-add-guiche" onclick="FechaModalCancelSenhaSala()">
-                        <p class="p-inside-btn">FECHAR</p>
+                    <h2 class="fa-trasnparent ">Cancelar Senha</h2>
+                    <div class="btns flexbotao no-shadow-btn " id="btn-close-modal-add-guiche"onclick="FechaModalCancelSenhaSala()">
+                        <i class="fa-trasnparent  fa-solid fa-times"></i>
                     </div>
                 </div>
+
+
                 <div class="modal-body flex-row">
                     {{!-- info new giche --}}
-                    <div class="btn-add-guiche-cancelar flexbotao" id="btn-volta-senha-sala" onclick="CancelarSenhaSalaConfirm(this.id)">
-                        <p class="p-inside-btn">Voltar senha para fila</p>
+                    <div class="btns" id="btn-volta-senha-sala" onclick="CancelarSenhaSalaConfirm(this.id)">
+                        <p>Voltar senha para fila</p>
                      </div>
-                     <div class="btn-add-guiche-salvar flexbotao"  id ="btn-destroy-senha-sala" onclick="CancelarSenhaSalaConfirm(this.id)">
+                     <div class="btns"   id ="btn-destroy-senha-sala" onclick="CancelarSenhaSalaConfirm(this.id)">
                         <p>Destruir Senha</p>
                      </div>
                 </div>
-                <div class="modal-footer flex-row">
-                     <div class="btn-add-guiche-cancelar flexbotao" id="btn-add-guiche-cancelar" onclick="FechaModalCancelSenhaSala()">
-                        <p class="p-inside-btn">Cancelar</p>
-                     </div>
 
+                <div class="modal-footer flex-row">
+                    <div class="btns flexbotao no-shadow-btn tools-btns-size"  id="btn-add-guiche-cancelar" onclick="FechaModalCancelSenhaSala()">
+                        <p>Cancelar</p>
+                     </div>
                 </div>
+                
             </div>
             
             <div class="box-title-giches flex-coll">
