--- a/views/guiches/recep_newatendi.hbs
+++ b/views/guiches/recep_newatendi.hbs
@@ -91,7 +91,7 @@ sockets.on('att-painel-guiche', function(data){
 
                 <div class="btns flex-row text-online"  value="{{id}}" id="btn-chama-preferencial-giche" onclick="atender_senha_recepcao(this.id)">
                     <i class="fa-solid fa-wheelchair" style=" font-size: 20px; color: rgb(0, 0, 0); margin-right: 5px; background-color:transparent;"></i>
-                    <p>Chamar Prefernecial {{qtd_senha_pref}}</p>
+                    <p>Chamar Preferencial {{qtd_senha_pref}}</p>
                 </div>
                 <div class="btns flex-row text-online"  value="{{id}}" id="btn-chama-comum-giche" onclick="atender_senha_recepcao(this.id)">
                     <i class="fa-solid fa-user" style=" font-size: 20px; color: rgb(0, 0, 0); margin-right: 5px; background-color:transparent;"></i>
