--- a/public/css/adm.css
+++ b/public/css/adm.css
@@ -218,17 +218,22 @@
 
 .list-giches {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
     width: 70%;
-    justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 5px rgb(0, 0, 0);
-    border-radius: 5px;
-    flex-grow: 1;
-    font-weight: bold;
-    background-color: rgb(255, 255, 255);
+    padding: 10px;  
+    position: relative;
+    box-shadow:
+     -7px -7px 20px 0px #fff9,
+     -4px -4px 5px 0px #fff9,
+     7px 7px 20px 0px #0002,
+     4px 4px 5px 0px #0001,
+     inset 0px 0px 0px 0px #fff9,
+     inset 0px 0px 0px 0px #0001,
+     inset 0px 0px 0px 0px #fff9,        
+     inset 0px 0px 0px 0px #0001;
+    transition:box-shadow 0.6s cubic-bezier(.79,.21,.06,.81);
+    border-radius: 10px;
+    transition: all 0.5s;
 }
 
 /* colunas */
@@ -237,7 +242,7 @@
     align-items: center;
     height: 50px;
     width: 100%;
-    background-color: rgb(0, 123, 180);
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 .title-giches{
     justify-content: center;
@@ -254,10 +259,11 @@
     height: 50px;
     width: 100%;
     border-bottom: 1px solid rgb(0, 0, 0);
+
     
 }
 .row-list-giches:hover{
-    background-color: rgb(0, 35, 51);
+    background-color: rgb(215, 237, 255);
     color: rgb(255, 255, 255);
     transition:none;
 }
@@ -267,6 +273,10 @@
     flex-grow: 1;
     border-right: 1px solid rgb(0, 0, 0);
     width: 100px;
+    background-color: transparent;
+}
+.item-giches p{
+    background-color: transparent;
 }
 
 /* botao editar */
