--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,6 +233,10 @@ body{
     font-size: 20px;
 }
 
+.fa-big {
+    font-size: 120px;
+    background-color: transparent;
+}
 
 .bolder{
     font-weight: 900;
@@ -427,13 +431,59 @@ body{
 
 
 
+/* TOTEN STYLE*/
+
+.page-toten{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+
+.grupo-container-tipos{
+
+    justify-content: center;
+    align-items: center;
+    gap:50px;
+    width: 100%;
+
+
+}
 
 
 
+.container-tipos{
+    background-color: rgb(235, 235, 235);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 0;
+    padding: 0;
+    width: 350px;
+    height: 350px;
+    box-shadow:
+     -7px -7px 20px 0px #fff9,
+     -4px -4px 5px 0px #fff9,
+     7px 7px 20px 0px #0002,
+     4px 4px 5px 0px #0001,
+     inset 0px 0px 0px 0px #fff9,
+     inset 0px 0px 0px 0px #0001,
+     inset 0px 0px 0px 0px #fff9,        
+     inset 0px 0px 0px 0px #0001;
+    transition:box-shadow 0.6s cubic-bezier(.79,.21,.06,.81);
+    border-radius:5px;
+    transition: all 0.5s;
+    text-align: center;
 
-
-
-
+}
 
 
 
