--- a/views/adm/config_adm.hbs
+++ b/views/adm/config_adm.hbs
@@ -44,11 +44,12 @@
         <div class="content-adm flex-coll">
             {{!-- lsita giches  --}}
 
-            <div class="modal-content" id="modal-giche">
+            <div class="modal-content-cancel-ficha" id="modal-giche">
+
                 <div class="modal-header flex-row">
-                    <h2>Novo Giche</h2>
-                    <div class="btn-close-modal-add-guiche flexbotao" id="btn-close-modal-add-guiche">
-                        <p class="p-inside-btn">FECHAR</p>
+                    <h2 class="fa-trasnparent">Novo Giche</h2>
+                    <div class="btns flexbotao no-shadow-btn" id="btn-close-modal-add-guiche">
+                        <i class="fa-trasnparent  fa-solid fa-times"></i>
                     </div>
                 </div>
                 <div class="modal-body">
@@ -56,7 +57,7 @@
                     <div class="box-inputs-new-giches flex-row">
                         <div class="box-inputs-new-giches-item flex-coll">
                             <label >Nome</label>
-                            <input type="text" name="nome_guiche_new" id="nome-guiche-new">
+                            <input class="  " type="text" name="nome_guiche_new" id="nome-guiche-new">
                         </div>
                         <div class=" box-inputs-new-giches-item flex-coll">
                             <label>Descrição</label>
@@ -64,11 +65,12 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="modal-footer flex-row">
-                     <div class="btn-add-guiche-cancelar flexbotao" id="btn-add-guiche-cancelar">
-                        <p class="p-inside-btn">Cancelar</p>
+                     <div class="btns flexbotao no-shadow-btn tools-btns-size" id="btn-add-guiche-cancelar">
+                        <p>Cancelar</p>
                      </div>
-                     <div class="btn-add-guiche-salvar flexbotao" id="btn-add-guiche-salvar">
+                     <div class="btns flexbotao no-shadow-btn tools-btns-size" id="btn-add-guiche-salvar">
                         <p>Salvar</p>
                      </div>
                 </div>
