--- a/views/salas/sala_newatendi.hbs
+++ b/views/salas/sala_newatendi.hbs
@@ -123,7 +123,7 @@ sockets.on('show_senha_painel_func_sala', function(data){
 
                 <div class="btns flex-row text-online"  value="{{id_sala}}" id="btn-chama-preferencial-sala" onclick="atender_senha_sala(this.id)">
                     <i class="fa-solid fa-wheelchair" style=" font-size: 20px; color: rgb(0, 0, 0); margin-right: 5px; background-color:transparent;"></i>
-                    <p>Chamar Prefernecial {{qtd_senha_pref}}</p>
+                    <p>Chamar Preferencial {{qtd_senha_pref}}</p>
                 </div>
 
                 <div class="btns flex-row text-online"  value="{{id_sala}}" id="btn-chama-comum-sala" onclick="atender_senha_sala(this.id)">
