--- a/views/guiches/recep_newatendi.hbs
+++ b/views/guiches/recep_newatendi.hbs
@@ -156,6 +156,10 @@ sockets.on('att-painel-guiche', function(data){
                         <i class="fa-spacing-left fa-solid fa-times"></i>
                         <p>Abortar</p>
                     </div>
+                    <div class="btns flex-row" id="btn-abortar-senha-guiche"  onclick="RechamaGuiche()">
+                        <i class="fa-spacing-left fa-solid fa-rotate-right"></i>
+                        <p>Rechamar</p>
+                    </div>
 
                 </div>
 
