--- a/views/main_device/select_device.hbs
+++ b/views/main_device/select_device.hbs
@@ -19,7 +19,7 @@
                     <img src="src/device/0.png" alt="">
                 </div>
                 <div class="btn-title ">
-                    <h1>Giches (Recepcao)</h1>
+                    <h1>Guiches (Recepcao)</h1>
                 </div>
                 <div class="box-device-botton flex-coll">
 
